quote vitamins site plan - fixed alignment of navigation links; added a vitamin logo under text

--- a/web-project/styles/base.css
+++ b/web-project/styles/base.css
@@ -11,7 +11,7 @@
 
     --primary-font: "Satisfy", Arial, sans-serif;
     --secondary-font: "Quicksand", sans-serif;
-
+    --default-font: Arial, sans-serif;
 
 }
 
@@ -77,7 +77,7 @@ body {
     margin: 0 20px;
     /* margin-right: 40px; */
     color: #000;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     flex: 1 1 auto;
     flex-wrap: nowrap;
 
@@ -124,6 +124,7 @@ body {
 
 .join-btn {
     font-family: var(--primary-font);
+    font-size: 1;
     padding: 10px 20px;
     background-color: rgba(83, 58, 113, 1);
     color: whitesmoke;
@@ -198,6 +199,104 @@ header {
 #menu {
 
     display: none;
+}
+
+
+/* ================= JOIN FORM ================= */
+
+
+
+form.join-form {
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr); */
+    color: var(--accent1-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    /* border: 1px solid rgba(0, 0, 0, 0.6); */
+
+    align-content: flex-start;
+    align-items: flex-start;
+
+    max-width: 100vw;
+    width: 100%;
+
+}
+
+
+
+
+label {
+    display: block;
+    margin: 10px;
+
+}
+
+input {
+
+    padding: 10px;
+    max-width: 60vw;
+    width: 100%;
+    height: 44px;
+}
+
+select {
+    display: flex;
+    margin: 7px;
+    padding: 10px;
+    width: 30vw;
+    height: 40px;
+}
+
+fieldset {
+    border-radius: 5px;
+    background-color: aliceblue;
+
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 50vw;
+    width: 100%;
+}
+
+fieldset label {
+    text-align: start;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+textarea {
+    width: 100%;
+
+    height: 100px;
+}
+
+
+
+.radio-label {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 15px auto;
+    font-size: 16px;
+
+}
+
+.radio-label:checked {
+    background-color: #76cf9f;
+    border-color: #666;
+}
+
+.radio-label:focus {
+    outline: 2px dashed #666;
+}
+
+input[type="radio"] {
+
+
+    height: 20px;
+    margin: 0;
+    padding: 0;
+
 }
 
 /* ================= MODAL ================= */
@@ -539,15 +638,20 @@ footer {
     }
 
     #menu {
-        font-size: 1.5rem;
-        border: 0;
-        position: absolute;
-        top: 10px;
-        right: 30px;
-        color: #000;
+
         background: none;
-        flex: 1 1 auto;
+        border: none;
+        color: #000;
+        cursor: pointer;
         display: block;
+        font-size: 2rem;
+        font-family: var(--default-font);
+        padding: .2rem 2vw;
+        position: absolute;
+        right: 30px;
+        top: 8px;
+        /* width: 100%; */
+        text-align: right;
 
     }
 
@@ -564,8 +668,26 @@ footer {
 
     }
 
+
+
+    .navigation {
+        display: flex;
+        flex-direction: column;
+
+    }
+
     .navigation ul {
         display: none;
+
+    }
+
+    .navigation ul li a {
+        font-size: 1rem;
+
+    }
+
+    .navigation ul li {
+        margin: 5px auto;
     }
 
     .navigation .open {
@@ -633,9 +755,9 @@ footer {
         font-size: 0.7rem;
     }
 
-    .join-btn {
+    /* .join-btn {
         display: none;
-    }
+    } */
 
     body {
         max-width: 100vw;
@@ -643,7 +765,29 @@ footer {
     }
 
     main {
-        width: 80vw;
-        max-width: 350px;
+        width: 100vw;
+        max-width: 100%;
     }
+
+    fieldset,
+    join-form {
+        max-width: 70vw;
+        width: 70%;
+    }
+}
+
+@media (max-width: 360px) {
+
+    fieldset,
+    join-form {
+        max-width: 90vw;
+        width: 90%;
+    }
+
+    input {
+        max-width: 100vw;
+        width: 100%;
+    }
+
+
 }
